--- a/MvcBlog/Views/Content/ContentByHeading.cshtml
+++ b/MvcBlog/Views/Content/ContentByHeading.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<div class="container pt-3">
+<div class="container ml-2 pt-3">
     <!-- Timelime example  -->
     <div class="row">
         <div class="col-md-12">
