--- a/MvcBlog/Views/AdminCategory/AddCategory.cshtml
+++ b/MvcBlog/Views/AdminCategory/AddCategory.cshtml
@@ -4,41 +4,60 @@
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-@using (Html.BeginForm("AddCategory", "AdminCategory", FormMethod.Post, new { style = "padding-top:20px" }))
-{
+@{
+    try
+    {
+        using (Html.BeginForm("AddCategory", "AdminCategory", FormMethod.Post, new { style = "padding-top:20px" }))
+        {
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.Label("Kategori Adı", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.CategoryName, null, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.Label("Kategori Adı", new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.CategoryName, null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.Label("Kategori Açıklması", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextAreaFor(model => model.CategoryDescription, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CategoryDescription, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                @*<div class="form-group">
+                    @Html.Label("Kategori Durumu", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.CategoryStatüs)
+                        @Html.ValidationMessageFor(model => model.CategoryStatüs, "", new { @class = "text-danger" })
+
+                    </div>
+                </div>*@
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        @Html.ActionLink("Listeye Dön", "CategoryList", null, new { @class = "btn btn-danger" })
+                        <button type="submit" class="btn btn-primary">Oluştur</button>
+                    </div>
+                </div>
             </div>
+        }
+    }
+    catch
+    {
+        <div swalDefaultWarning">
+            Launch Warning Toast
         </div>
-
-        <div class="form-group">
-            @Html.Label("Kategori Açıklması", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.CategoryDescription,  new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Kategori Durumu", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryStatüs)
-                @Html.ValidationMessageFor(model => model.CategoryStatüs, "", new { @class = "text-danger" })
-
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Listeye Dön", "CategoryList", null, new { @class = "btn btn-danger" })
-                <button type="submit" class="btn btn-primary">Oluştur</button>
-            </div>
-        </div>
-    </div>
+    }
 }
+<script>
+    $('.swalDefaultWarning').click(function () {
+        Toast.fire({
+            icon: 'warning',
+            title: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr.'
+        })
+    });
+</script>
