--- a/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
+++ b/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
@@ -32,14 +32,14 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.Label("Kategori Durumu", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CategoryStatüs)
                 @Html.ValidationMessageFor(model => model.CategoryStatüs, "", new { @class = "text-danger" })
 
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
