--- a/MvcBlog/Views/Contact/ContactSideBar.cshtml
+++ b/MvcBlog/Views/Contact/ContactSideBar.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="card">
+﻿
+<a href="/Message/NewMessage/" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
+<div class="card">
     <div class="card-header">
         <h3 class="card-title">Klasörler</h3>
         <div class="card-tools">
