--- a/MvcBlog/Views/Message/NewMessage.cshtml
+++ b/MvcBlog/Views/Message/NewMessage.cshtml
@@ -9,7 +9,7 @@
 <div class="container-fluid pt-2">
     <div class="row">
         <div class="col-md-3">
-            <a href="mailbox.html" class="btn btn-primary btn-block mb-3">Back to Inbox</a>
+
 
             @Html.Action("ContactSideBar", "Contact")
         </div>
@@ -35,8 +35,7 @@
                             <textarea id="compose-textarea" class="form-control" name="MessageContent" style="height: 600px">
 
                                 </textarea>
-                            @*@Html.TextAreaFor(model => model.MessageContent, new { @class = "form-control", @id = "compose-textarea", @style = "height: 600px" })
-                            @Html.ValidationMessageFor(model => model.MessageContent, "", new { @class = "text-danger" })*@
+
                         </div>
                         <div class="form-group">
                             <div class="btn btn-default btn-file">
@@ -47,9 +46,9 @@
                         </div>
                         <div class="float-right">
                             <button type="submit" name="menuName" value="draft" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Taslak</button>
-                            <button type="submit" name="menuName"  value="send" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
+                            <button type="submit" name="menuName" value="send" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
                         </div>
-                        <button type="reset" name="menuName"  value="cancel" class="btn btn-default"><i class="fas fa-times"></i> İptal</button>
+                        <button type="reset" name="menuName" value="cancel" class="btn btn-default"><i class="fas fa-times"></i> İptal</button>
                     }
                 </div>
 
@@ -68,13 +67,20 @@
 
 </div>
 
-<script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>
+@*<script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>*@
 <!-- Bootstrap 4 -->
-<script src="~/themes/AdminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+@*<script src="~/themes/AdminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>*@
 <!-- AdminLTE App -->
-<script src="~/themes/AdminLTE/dist/js/adminlte.min.js"></script>
+@*<script src="~/themes/AdminLTE/dist/js/adminlte.min.js"></script>*@
 <!-- AdminLTE for demo purposes -->
-<script src="~/themes/AdminLTE/dist/js/demo.js"></script>
+@*<script src="~/themes/AdminLTE/dist/js/demo.js"></script>*@
+@*<script src="~/themes/AdminLTE/plugins/summernote/summernote-bs4.min.js"></script>
+    <script>
+        $(function () {
+            //Add text editor
+            $('#compose-textarea').summernote()
+        })
+    </script>*@
 <script src="~/themes/AdminLTE/plugins/summernote/summernote-bs4.min.js"></script>
 <script>
     $(function () {
@@ -82,3 +88,4 @@
         $('#compose-textarea').summernote()
     })
 </script>
+
